# claude-usage-widget

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: release.yml
src/: cpu_temp.rs  icon.rs  log.rs  main.rs  notify.rs  panel.rs  registry.rs  single_instance.rs  usage.rs
