[package]
name = "claude-usage-widget"
version = "0.6.0"
edition = "2024"

[dependencies]
chrono = "0.4.45"
reqwest = { version = "0.13.4", features = ["blocking", "json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
tao = "0.35.3"
tray-icon = "0.24.1"
winreg = "0.56.0"
# Used directly (not just transitively via tray-icon/winreg) for the
# single-instance mutex guard and the Shell_NotifyIcon balloon notification;
# version pinned to what was already resolved in the dependency tree so this
# doesn't pull in a second copy of windows-sys.
windows-sys = { version = "0.61.2", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_Threading",
    "Win32_System_LibraryLoader",
    # SetStdHandle, used by `log.rs` to point this console-less process's
    # stderr at a real log file.
    "Win32_System_Console",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Graphics_Gdi",
] }
